navigation to and back for roomeditor page