@@ -10,12 +10,14 @@ import java.io.IOException;
 //This class handles start up
 //run this java file to start the application
 
+//javac -d ./build *.java --module-path "C:\Program Files (x86)\Java\javafx-sdk-23\lib" --add-modules javafx.controls,javafx.fxml
+
 public class HelloApplication extends Application {
 
     @Override
     public void start(Stage stage) throws IOException {
         FXMLLoader fxmlLoader = new FXMLLoader(HelloApplication.class.getResource("login.fxml"));
-        Scene scene = new Scene(fxmlLoader.load(), 300, 361);
+        Scene scene = new Scene(fxmlLoader.load());
         stage.setTitle("Login");
         stage.setScene(scene);
         stage.show();
